exports[`test PlayerJoinButton renders as before 1`] = `
<Connect(Component)
  action={
    Object {
      "gameCode": "",
      "type": "PLAYER_JOIN",
    }
  }
  className="btn player-join-button"
  res="Join as player" />
`;

exports[`test TableJoinButton renders as before 1`] = `
<Connect(Component)
  action={
    Object {
      "type": "TABLE_JOIN",
    }
  }
  className="btn table-join-button"
  res="Join as table" />
`;
